# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  config.h.in
src/: main.cpp
src/client/: client.cpp  client.hpp  window.cpp  window.hpp
src/utilities/: person.cpp  person.hpp  range.cpp  range.hpp  utility.cpp  utility.hpp  validate.cpp  validate.hpp  version.cpp  version.hpp
tests/client/: window.cpp
tests/utilities/: person.cpp  range.cpp  utility.cpp  validate.cpp  version.cpp
